2018.06.21/Summary.md
## Narzędzia

1. Git
    * Clone
    * Pull
    * Stage / Add
    * Commit
    * Push
    * Pull requesta
    * Checkout 
    * Merge
    * Reset
    * (TODO) Cherrypick
    * (TODO) Resolvowanie conflictów :P
2. Visual Studio
    * Proste programy w C#
    * NCrunch - Continous testing
    * Prosta strona WEB API
    * Swagger
3. Postman
4. Notepad++/Visual studio code
5. Slack

## Umiejętności (Hard skills)

1. Programowanie (podstawy programowania obiektowego) - C#
2. Podstawy pisania testów jednostkowych - NUnit
3. Podstawy tworzenia atrap testów - Moq
4. Znajomość serializacji i deserializacji obiektów (JSON)
5. Znajomość IOC (Invertion of control)/DI (Dependency Injection) (Teoria)

10. Umiejętnośc napisani przypadków testowych (Use Case) 
11. Umiejętność zaraportowania defektu (Defet Report)
12. Znajomość cyklu wytwarzania oprogramowania/życia defektu

15. Znajomość koncepcyjna Cointnous Testing, Continous Integration i Continous Deployment

## Soft skillz

1. Wiecie, ze warto być odpowiedzialnym za to co się robi

###

Jesli chcecie zostać developerami

* Wzorce projektowe (ok 45-50 na wiki)
https://en.wikipedia.org/wiki/Software_design_pattern