2018.06.28/Summary.md
## Narzędzia

1. Git
    * Clone
    * Pull
    * Stage / Add
    * Commit
    * Push
    * Pull requesta
    * Checkout 
    * Merge
    * Reset
    * (TODO) Cherrypick
    * (TODO) Resolvowanie conflictów :P
2. Visual Studio
    * Proste programy w C#
    * NCrunch - Continous testing
    * Prosta strona WEB API
    * Swagger
3. Linux (Ubuntu) - podstawy z LiveCd + Partycje na dysku twardym
    * Uruchomienie LiveCd
    * Podstawowe komendy
4. Postman
5. Notepad++/Visual studio code
6. Slack


## Umiejętności (Hard skills)

1. Programowanie (podstawy programowania obiektowego) - C#
2. Podstawy pisania testów jednostkowych - NUnit
3. Podstawy tworzenia atrap testów - Moq
4. Znajomość serializacji i deserializacji obiektów (JSON)
5. Znajomość IOC (Invertion of control)/DI (Dependency Injection) (Teoria)
6. Podstawy pisania testów stron internetowych (Selenium/C#)
7. Znajomość RegExpów

10. Umiejętnośc napisani przypadków testowych (Use Case) 
11. Umiejętność wskazania aktorów w ssytamie (Actor)
12. Umiejętność zaraportowania defektu (Defet Report)
13. Znajomość cyklu wytwarzania oprogramowania/życia defektu

15. Znajomość koncepcyjna Cointnous Testing, Continous Integration i Continous Deployment

## Soft skillz

1. Wiecie, ze warto być odpowiedzialnym za to co się robi

###

Jesli chcecie zostać developerami

* Wzorce projektowe (ok 45-50 na wiki)
https://en.wikipedia.org/wiki/Software_design_pattern